# predator-prey-evolution-communication

./: .gitignore  CLAUDE.md  Cargo.toml  EXPERIMENTS.md  FINDINGS.md  FRAMEWORK.md  LICENSE  PERFORMANCE.md  README.md  analyze.py  clippy.toml  deep_analysis.py  launch.sh  monitor.sh  status.sh
.cargo/: config.toml
.claude/: settings.json
.claude/rules/: agent.md  brain.md  evolution.md  signal.md  stats.md  world.md
.claude/skills/lint/: SKILL.md
.github/workflows/: ci.yml
benches/: simulation.rs
data/: README.md  v15-mute-psn30-2k-42-output.csv  v15-psn30-2k-42-output.csv  v15-psn30-2k-42-trajectory.csv  v15-psn30-2k-43-output.csv
data/baseline-s100/: output.csv
data/mute-s100/: output.csv
data/v10-2k-42/: input_mi.csv  output.csv  trajectory.csv
data/v11-cap32-42/: output.csv
data/v11-cap6-42/: output.csv
data/v12-blind6-42/: input_mi.csv  output.csv  trajectory.csv
data/v6-mute-s300/: output.csv
data/v6-signal-s300/: output.csv
data/v7-mute-42/: output.csv
data/v7-signals-42/: output.csv
figures/: generate_figures.py
findings/: 2026-03-09-baseline-runs.md  2026-03-12-overnight-experiment.md
src/: brain.rs  config.rs  evolution.rs  lib.rs  main.rs  metrics.rs  rng.rs  signal.rs  snapshot.rs  world.rs
src/agent/: mod.rs  predator.rs  prey.rs  sensor.rs
src/brain/: activation.rs  innovation.rs  mod.rs
src/evolution/: mod.rs
src/signal/: message.rs
src/stats/: mod.rs
src/viz/: mod.rs
src/world/: food.rs  grid.rs  mod.rs
