[package]
name = "semiotic-emergence"
version = "0.1.0"
edition = "2021"
description = "A semiotic observatory: watching meaning come into existence in a minimal evolutionary world"
license = "MIT"
repository = "https://github.com/onblueroses/semiotic-emergence"
homepage = "https://github.com/onblueroses/semiotic-emergence"
documentation = "https://docs.rs/semiotic-emergence"
keywords = ["simulation", "evolution", "rust", "signals", "research"]
categories = ["science", "simulation"]
exclude = [
    ".claude/**",
    "CLAUDE.md",
    ".cargo/**",
    "data/**",
    "runs/**",
    "figures/**",
    "gpu/**",
    "output.csv",
    "trajectory.csv",
    "input_mi.csv",
    "divergence.csv",
    "runs.tsv",
    "autooptimize-experiments.tsv",
]

[dependencies]
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
